fix: se corrige tamaño de card-body por defecto, se agrega overflow property

--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,12 @@
     box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
     border: none;
   }
+  .card-body {
+    max-height: 250px;
+    min-height: 250px;
+    overflow: auto;
+  }
+
   .carousel-control-prev,
   .carousel-control-next {
     color: #16153D;
